--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1334,7 +1334,7 @@
                                         </connections>
                                     </segmentedControl>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="4nR-0w-Tom" firstAttribute="centerY" secondItem="3m5-KW-6T0" secondAttribute="centerY" id="04K-h4-u5C"/>
                                     <constraint firstItem="4nR-0w-Tom" firstAttribute="centerX" secondItem="3m5-KW-6T0" secondAttribute="centerX" id="K90-dF-BRO"/>
@@ -1356,7 +1356,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mA9-91-oqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1526.5" y="627.5"/>
+            <point key="canvasLocation" x="1758.5" y="261.5"/>
         </scene>
         <!--Test View Controller-->
         <scene sceneID="b9G-sh-2Yo">
